tests/wormhole/sfpi/gold/warn_spill.txt
In file included from ../../../include/sfpi.h:121,
                 from test.h:11,
                 from warn.cc:5:
../../../include/wormhole/sfpi_imp.h: In function 'void spill()':
../../../include/wormhole/sfpi_hw.h:117:76: fatal error: cannot store sfpu register (register spill)
  117 | #define __builtin_rvtt_sfploadi_ex(mod0, imm16) __builtin_riscv_sfploadi_ex((void *)ckernel::instrn_buffer, mod0, imm16)
      |                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../include/wormhole/sfpi_imp.h:172:9: note: in expansion of macro '__builtin_rvtt_sfploadi_ex'
  172 |     v = __builtin_rvtt_sfploadi_ex(SFPLOADI_EX_MOD0_FLOAT, f32asui(val));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
